src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Adult1_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Adult1 Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Adult2_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Adult2 Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Adult2 Contact)</relationshipLabel>
        <relationshipName>Adult2Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auto_Num__c</fullName>
        <label>Auto Num</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>BRI_AGE__c</fullName>
        <label>AGE</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRI_Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Alcohol_Abuse__c</fullName>
        <label>Alcohol Abuse</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Alcohol_After_Known_Pregnancy__c</fullName>
        <label>Alcohol After Known Pregnancy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Alcohol_Use__c</fullName>
        <label>Alcohol Use</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Average_Hours_Per_Week__c</fullName>
        <label>Average Hours Per Week</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Average_Unpaid_Hours_Childcare__c</fullName>
        <label>Average Unpaid Hours Childcare</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRI_BSF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BSF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Baby_Delivery_Problems_Specify__c</fullName>
        <label>Baby Delivery Problems Specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Baby_Delivery_Problems__c</fullName>
        <label>Baby Delivery Problems</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_CESD_SCore_22__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CESD SCore 22</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Change_Date__c</fullName>
        <label>Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRI_Change__c</fullName>
        <label>Change</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Checkup_PAP_Smears__c</fullName>
        <label>Checkup PAP Smears</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>Xyz</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Child_Birth_Weight__c</fullName>
        <label>Child Birth Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRI_Child_Number__c</fullName>
        <label>Child Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRI_Citizen__c</fullName>
        <label>Citizen</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Clinic_Provider__c</fullName>
        <label>Clinic Provider</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Cohabitating__c</fullName>
        <label>Cohabitating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BRI_Consent_Date__c</fullName>
        <label>Consent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRI_County_Code__c</fullName>
        <label>County Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Date_Out__c</fullName>
        <label>Date Out</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRI_Deceased__c</fullName>
        <label>Deceased</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Disable_Status_Learning__c</fullName>
        <label>Disable Status Learning</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Disable_Status_MEB__c</fullName>
        <label>Disable Status MEB</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Disable_Status_Physical__c</fullName>
        <label>Disable Status Physical</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Doctor_s_Name__c</fullName>
        <label>Doctor&apos;s Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Drug_During_Pregnancy__c</fullName>
        <label>Drug During Pregnancy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Drug_Use__c</fullName>
        <label>Drug Use</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Earnings__c</fullName>
        <label>Earnings</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Education_Avg_Hours_Week__c</fullName>
        <label>Education Avg Hours Week</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Education_Child__c</fullName>
        <label>Education Child</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Education_Level__c</fullName>
        <label>Education Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>8th Grade or less</fullName>
                </value>
                <value>
                    <fullName>Four Year College Degree</fullName>
                </value>
                <value>
                    <fullName>GED</fullName>
                </value>
                <value>
                    <fullName>Graduate Degree</fullName>
                </value>
                <value>
                    <fullName>High School Graduate</fullName>
                </value>
                <value>
                    <fullName>Some College</fullName>
                </value>
                <value>
                    <fullName>Some High School</fullName>
                </value>
                <value>
                    <fullName>Two Year Degree</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Employement_Status__c</fullName>
        <label>Employement Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Employed Full Time</fullName>
                </value>
                <value>
                    <fullName>Employed Part Time</fullName>
                </value>
                <value>
                    <fullName>Maternity  leave, unpaid, full time</fullName>
                </value>
                <value>
                    <fullName>Maternity  leave, unpaid, part time</fullName>
                </value>
                <value>
                    <fullName>Maternity leave, paid, full time</fullName>
                </value>
                <value>
                    <fullName>Permanent Disability</fullName>
                </value>
                <value>
                    <fullName>Temporary Disability</fullName>
                </value>
                <value>
                    <fullName>Unemployed Not Seeking Work-Barriers</fullName>
                </value>
                <value>
                    <fullName>Unemployed Not Seeking Work-Preference</fullName>
                </value>
                <value>
                    <fullName>Unemployed Not Seeking Work-Teen Caregiver</fullName>
                </value>
                <value>
                    <fullName>Unemployed Seeking Work</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ethnicity</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_FN_Program_Within_County__c</fullName>
        <label>FN - Program within County</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Family_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Family Id</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRI_Family_Number__c</fullName>
        <label>Family Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRI_Financial_Support__c</fullName>
        <label>Financial Support</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Gestational_Age__c</fullName>
        <label>Gestational Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRI_HOH__c</fullName>
        <label>HOH</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRI_Housing_Specify__c</fullName>
        <label>Housing Specify</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_In_School__c</fullName>
        <label>In School</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>College 2 Year</fullName>
                </value>
                <value>
                    <fullName>College 4 Year</fullName>
                </value>
                <value>
                    <fullName>ESL</fullName>
                </value>
                <value>
                    <fullName>GED Program</fullName>
                </value>
                <value>
                    <fullName>Graduate School</fullName>
                </value>
                <value>
                    <fullName>High/Middle School</fullName>
                </value>
                <value>
                    <fullName>Not Enrolled in School</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Vocational College</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Inactive_Date__c</fullName>
        <label>Inactive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRI_Inactive_Reason__c</fullName>
        <label>Inactive Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Abc</fullName>
                </value>
                <value>
                    <fullName>Xyz</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Involve_Unkonwn__c</fullName>
        <label>Involve Unkonwn</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Involved__c</fullName>
        <label>Involved</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Is_Consented__c</fullName>
        <label>Is Consented</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Language</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Learn__c</fullName>
        <label>Learn</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Live_Birth__c</fullName>
        <label>Live Birth</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_MEB__c</fullName>
        <label>MEB</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_MOB_Delivery_Problems_Specify__c</fullName>
        <label>MOB Delivery Problems Specify</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BRI_MOB_Delivery_Problems__c</fullName>
        <label>MOB Delivery Problems</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BRI_MOB_Smoke__c</fullName>
        <label>MOB Smoke</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mom smoked</fullName>
                </value>
                <value>
                    <fullName>Mom reduced smoking</fullName>
                </value>
                <value>
                    <fullName>Mom quit smoking</fullName>
                </value>
                <value>
                    <fullName>Mom_did_not_smoke</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_MOE__c</fullName>
        <label>MOE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_MRDD__c</fullName>
        <label>MRDD</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Marital_Status__c</fullName>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Marital_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Monthly_Income__c</fullName>
        <label>Monthly Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BRI_Multi_Number__c</fullName>
        <description>If Multiples, How many babies?</description>
        <label>Multi Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRI_Multi_Sequence__c</fullName>
        <inlineHelpText>If multiples, Which baby is this?</inlineHelpText>
        <label>Multi Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRI_Not_Involved__c</fullName>
        <label>Not Involved</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Old_Family_Number__c</fullName>
        <label>Old Family Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Other_Phone_Type__c</fullName>
        <label>Other Phone Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Message Only</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>No Phone</fullName>
                </value>
                <value>
                    <fullName>Text Only</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Withheld</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_PEmployer__c</fullName>
        <label>PEmployer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_PMRDD__c</fullName>
        <label>PMRDD</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_PRelation__c</fullName>
        <label>PRelation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_P_Financial_Contribute__c</fullName>
        <label>P-Financial Contribute</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_P_MOE__c</fullName>
        <label>P-MOE</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Pays_Support__c</fullName>
        <label>Pays Support</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Phone_Type__c</fullName>
        <label>Phone Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Message Only</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>No Phone</fullName>
                </value>
                <value>
                    <fullName>Text Only</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Withheld</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Physical__c</fullName>
        <label>Physical</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Postnatal_Alcohol_Abuse__c</fullName>
        <label>Postnatal Alcohol Abuse</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Postnatal_Drug_Use__c</fullName>
        <label>Postnatal Drug Use</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Poverty_Level__c</fullName>
        <label>Poverty Level</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Pregnancy_Problems_Specify__c</fullName>
        <label>Pregnancy Problems Specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Prenatal_Care__c</fullName>
        <label>Prenatal Care</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Primary_Insurance__c</fullName>
        <label>Primary Insurance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Primary_Insurance</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Reason__c</fullName>
        <label>Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Receive_Benefits__c</fullName>
        <label>Receive Benefits</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Referral_ASQ_3__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if  FSW  chooses  ͞YES͟,  the  referral  form in assesments</description>
        <label>Referral ASQ-3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Referral_ASQ_SE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if  FSW  chooses  ͞YES͟,  the  referral  form  in assesment</description>
        <label>Referral ASQ-SE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Relationship__c</fullName>
        <label>Relationship</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Reliable_Transportation__c</fullName>
        <label>Reliable Transportation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_SSN_Consent_Date__c</fullName>
        <label>SSN Consent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BRI_SS_Number__c</fullName>
        <label>SS Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Same_Address_as_MOB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same Address as Adult1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_School_Discipline_Action__c</fullName>
        <label>School Discipline Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Expelled</fullName>
                </value>
                <value>
                    <fullName>In School Suspension</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Out of School Suspension</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_School_District__c</fullName>
        <label>School District</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_School_Status__c</fullName>
        <label>School Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Secondary_Activites__c</fullName>
        <defaultValue>false</defaultValue>
        <description>In case in assessment record type is secondary activity</description>
        <label>Secondary Activites</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Secondary_Insurance__c</fullName>
        <label>Secondary Insurance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Secondary_Insurance</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_State_ID__c</fullName>
        <label>State ID</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Status_In_CP__c</fullName>
        <label>Status In CP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Target of Intervention</fullName>
                </value>
                <value>
                    <fullName>Target of Intervention</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Status__c</fullName>
        <label>Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BRI_Substance_Exposed_Infant__c</fullName>
        <label>Substance Exposed Infant</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_TGT_BirthWt_Old__c</fullName>
        <label>TGT BirthWt Old</label>
        <length>25</length>
        <type>Text</type>
    </fields>
</CustomObject>